[package]
name = "timers"
version = "1.2.2"
edition = "2021"
authors = ["belst"]
description = "Allows you to configure timers and start/stop them via hotkeys"

[lib]
crate-type = ["cdylib"]
name = "timers"

[dependencies]
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[dependencies.nexus]
git = "https://github.com/Zerthox/nexus-rs"
features = ["log", "serde"]
